WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105717
[BlackBerry] Fix various RenderQueue bugs introduced by
r138024
https://bugs.webkit.org/show_bug.cgi?id=105717
Summary
[BlackBerry] Fix various RenderQueue bugs introduced by r138024
George Staikos
Reported
2012-12-24 05:44:19 PST
From Jakob: Scroll/zoom jobs were pretty solid, but I managed to leave some bugs in the region handling of RenderQueue's renderRegularRenderJobs() function, causing us to skip a desired blit or render operation in cases where the region and tile tracking did not match up.
Attachments
Patch to delete a lot of the code and start unforking
(3.17 KB, patch)
2012-12-24 05:46 PST
,
George Staikos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-12-24 05:46:22 PST
Created
attachment 180666
[details]
Patch to delete a lot of the code and start unforking Jakob's patch, reviewed by me
George Staikos
Comment 2
2012-12-24 05:51:18 PST
(In reply to
comment #1
)
> Created an attachment (id=180666) [details] > Patch to delete a lot of the code and start unforking > > Jakob's patch, reviewed by me
lols to autocomplete....
WebKit Review Bot
Comment 3
2012-12-24 06:04:23 PST
Comment on
attachment 180666
[details]
Patch to delete a lot of the code and start unforking Clearing flags on attachment: 180666 Committed
r138441
: <
http://trac.webkit.org/changeset/138441
>
WebKit Review Bot
Comment 4
2012-12-24 06:04:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug