[BlackBerry] Fix various RenderQueue bugs introduced by r138024. https://bugs.webkit.org/show_bug.cgi?id=105717 RIM PR 269029

Reviewed by George Staikos.

Scroll/zoom jobs were pretty solid, but I managed to
leave some bugs in the region handling of RenderQueue's
renderRegularRenderJobs() function, causing us to skip
a desired blit or render operation in cases where the
region and tile tracking did not match up.

This commit fixes these errors.

* WebKitSupport/RenderQueue.cpp:
(BlackBerry::WebKit::RenderQueue::renderRegularRenderJobs):


Canonical link: https://commits.webkit.org/123925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138441 268f45cc-cd09-0410-ab3c-d52691b4dbfc